segunda seccion lista

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		  </div>
 	</header>
 	<section class="one">
-		<div class="row center">
+		<div class="row center services">
 			<div class="col s3 m3 l3 services">
 				<img src="assets/img/skin_care_1_thumb.jpg" alt="" class="circle">
 				<h5>SKIN CARE</h5>
@@ -77,7 +77,26 @@
 			</div>
 		</div>
 	</section>
-	       
+	<section class="two">
+		<div class="row">
+			<div class="col s5 m5 l5 center description">
+				<img src="assets/img/welcom_thumb.jpg" class="responsive-img" alt="">
+			</div>
+			<div class="col s7 m7 l7 description">
+				<div class="center">
+					<h4>WELCOME TO BEAUTY & HAIR</h4>
+				</div>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime ratione deleniti, nihil ad adipisci a necessitatibus.</p>
+				<ul>
+					<li><img src="assets/img/icon_list.png" alt=""> Lorem ipsum dolor sit amet</li>
+					<li><img src="assets/img/icon_list.png" alt=""> Lorem ipsum dolor sit amet</li>
+					<li><img src="assets/img/icon_list.png" alt=""> Lorem ipsum dolor sit amet</li>
+					<li><img src="assets/img/icon_list.png" alt=""> Lorem ipsum dolor sit amet</li>
+					<li><img src="assets/img/icon_list.png" alt=""> Lorem ipsum dolor sit amet</li>
+				</ul>
+			</div>
+		</div>
+	</section>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/js/materialize.min.js"></script>
 	<script src="assets/js/main.js"></script>
