tercera seccion lista

--- a/index.html
+++ b/index.html
@@ -97,6 +97,22 @@
 			</div>
 		</div>
 	</section>
+	<section class="three">
+		<div class="row">
+			<div class="col s6 m6 l6 about box_right">
+				<h5>ABOUT US</h5>
+				<li class="divider"></li>
+				<img src="assets/img/home1.jpg" alt="">
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis doloribus obcaecati harum deserunt enim! Quod debitis aperiam accusantium nostrum in nisi ratione laborum blanditiis, illo harum facere consectetur, obcaecati quae.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex suscipit, quos id nostrum aperiam amet ea temporibus perspiciatis debitis voluptatum expedita vero minus praesentium odit, mollitia reprehenderit consequuntur impedit necessitatibus.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia tempora sunt, aliquam sequi optio veritatis eligendi officiis itaque voluptas amet quos, deleniti facilis in aperiam dolorum obcaecati ipsam aut mollitia.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt, ex, pariatur! Hic sapiente tempora tempore fuga minus in beatae quis! Officiis consequatur voluptatibus necessitatibus aliquam sapiente a, iure neque minus.</p>
+			</div>
+			<div class="col s6 m6 l6 program box_left">
+				<h5>GIFT PROGRAM</h5>
+				<li class="divider">o</li>
+				<img src="assets/img/home2.jpg" alt="">
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis doloribus obcaecati harum deserunt enim! Quod debitis aperiam accusantium nostrum in nisi ratione laborum blanditiis, illo harum facere consectetur, obcaecati quae.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex suscipit, quos id nostrum aperiam amet ea temporibus perspiciatis debitis voluptatum expedita vero minus praesentium odit, mollitia reprehenderit consequuntur impedit necessitatibus.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia tempora sunt, aliquam sequi optio veritatis eligendi officiis itaque voluptas amet quos, deleniti facilis in aperiam dolorum obcaecati ipsam aut mollitia.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt, ex, pariatur! Hic sapiente tempora tempore fuga minus in beatae quis! Officiis consequatur voluptatibus necessitatibus aliquam sapiente a, iure neque minus.</p>
+			</div>
+		</div>
+	</section>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/js/materialize.min.js"></script>
 	<script src="assets/js/main.js"></script>
