--- a/index.html
+++ b/index.html
@@ -33,12 +33,16 @@
 	  </div>
 	</nav>
 	<header>
-		<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-		<div class="carousel carousel-slider">
-		    <a class="carousel-item" href="#one!"><img src="assets/img/slide1.jpg"></a>
-		    <a class="carousel-item" href="#two!"><img src="https://lorempixel.com/800/400/food/2"></a>
-		    <a class="carousel-item" href="#three!"><img src="https://lorempixel.com/800/400/food/3"></a>
-		    <a class="carousel-item" href="#four!"><img src="https://lorempixel.com/800/400/food/4"></a>
+		<div class="carousel carousel-slider center" data-indicators="true">
+		    <div class="carousel-item red white-text" href="#one!">
+		      <img src="assets/img/slide1.png" alt="">
+		    </div>
+		    <div class="carousel-item amber white-text" href="#two!">
+		      <img src="assets/img/slide2.jpg" alt="">
+		    </div>
+		    <div class="carousel-item green white-text" href="#three!">
+		      <img src="assets/img/slide3.jpg" alt="">
+		    </div>
 		  </div>
 	</header>
 	<section class="one">
@@ -78,7 +82,7 @@
 		</div>
 	</section>
 	<section class="two">
-		<div class="row">
+		<div class="row description">
 			<div class="col s5 m5 l5 center description">
 				<img src="assets/img/welcom_thumb.jpg" class="responsive-img" alt="">
 			</div>
@@ -98,7 +102,7 @@
 		</div>
 	</section>
 	<section class="three">
-		<div class="row">
+		<div class="row description">
 			<div class="col s6 m6 l6 about box_right">
 				<h5>ABOUT US</h5>
 				<li class="divider"></li>
@@ -113,6 +117,39 @@
 			</div>
 		</div>
 	</section>
+	<footer>
+		<div class="row">
+			<div class="col s6 m6 l6">
+				<h5>FOLLOW US</h5>
+				<div class="row">
+					<div class="col m3">
+						<img src="assets/img/facebook-logo-webtreatsetc.png" alt="">
+					</div>
+					<div class="col m3">
+						<img src="assets/img/google-g-logo-webtreatsetc.png" alt="">
+					</div>
+					<div class="col m3">
+						<img src="assets/img/twitter-bird3-webtreatsetc (1).png" alt="">
+					</div>
+					<div class="col m3">
+						<img src="assets/img/rss-basic-webtreatsetc.png" alt="">
+					</div>
+				</div>
+			</div>
+			<div class="col s3 m3 l3">
+				<h5>PEOPLE ARE TALKING</h5>
+				<span>"</span>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi laudantium id debitis, cum fuga aliquid vitae! Pariatur nihil libero labore soluta quos recusandae adipisci sed, placeat aliquid, rem sit, dolores!</p>
+			</div>
+			<div class="col s3 m3 l3">
+				<h5>CONTACT US</h5>
+				<h5>TOLL FREE: 1 800 987 65 43</h5>
+				<h6>E-mail: <span>email@demolink.org</span></h6>
+				<h5>OUR ADDRESS</h5>
+				<h6>17600 Younge Biggest St, Toronto, L3Y 4Z1</h6>
+			</div>
+		</div>
+	</footer>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/js/materialize.min.js"></script>
 	<script src="assets/js/main.js"></script>
